--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # DataCleaningR
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/fabiandistler/DataCleaningR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/fabiandistler/DataCleaningR/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of DataCleaningR is to ...
