--- a/dev/flat_load_data.Rmd
+++ b/dev/flat_load_data.Rmd
@@ -46,5 +46,5 @@ test_that("load_data works", {
 ```{r development-inflate, eval=FALSE}
 # Run but keep eval=FALSE to avoid infinite loop
 # Execute in the console directly
-fusen::inflate(flat_file = "dev/flat_load_data.Rmd", vignette_name = "Minimal")
+fusen::inflate(flat_file = "dev/flat_load_data.Rmd", vignette_name = NA)
 ```
