--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/fabiandistler/DataCleaningR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/fabiandistler/DataCleaningR/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/fabiandistler/DataCleaningR/branch/main/graph/badge.svg)](https://app.codecov.io/gh/fabiandistler/DataCleaningR?branch=main)
 <!-- badges: end -->
 
 The goal of DataCleaningR is to ...
@@ -28,6 +29,10 @@ You can install the development version of DataCleaningR like so:
 ``` r
 # FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
 ```
+
+## Documentation
+
+Full documentation website on: https://fabiandistler.github.io/DataCleaningR
 
 ## Example
 
